Fix Java 11 compatibility for DashboardServlet